[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "Real-world email triage environment for training AI agents using OpenEnv framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "OpenEnv Community", email = "openenv@huggingface.co"}
]
requires-python = ">=3.11"
dependencies = [
  "pydantic==2.5.0",
  "pydantic-core==2.14.1",
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "starlette==0.27.0",
  "openai==1.3.0",
  "anthropic==0.7.0",
  "requests==2.31.0",
  "python-dotenv==1.0.0",
  "typing-extensions==4.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "httpx==0.25.1",
]

[project.urls]
Homepage = "https://github.com/SHUSMIT/openv_sub"
Repository = "https://github.com/SHUSMIT/openv_sub"
Documentation = "https://github.com/SHUSMIT/openv_sub"

[tool.setuptools]
packages = ["openenv_email_triage"]

[tool.setuptools.package-data]
openenv_email_triage = ["*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
