[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "Real-world email triage and response prioritization environment for AI agents"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "pydantic>=2.5.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
